# habit-tracker

./: .gitignore  CLAUDE.md  Lezione3_HabitTracker_Spec.md  README.md  docker-compose.yml  pyproject.toml
.claude/plans/: L3-implementation-approach.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
docker/: Dockerfile
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AddHabitModal.tsx  CoachDrawer.tsx  HabitCard.tsx  HabitHeatmap.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: supabase.ts
frontend/src/pages/: DashboardPage.tsx  HabitDetailPage.tsx  LoginPage.tsx
frontend/src/services/: coachApi.ts  habitApi.ts
frontend/src/types/: index.ts
specs/001-l4-frontend-ai-coach/: bolt-prompt.md  data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/001-l4-frontend-ai-coach/checklists/: requirements.md
specs/001-l4-frontend-ai-coach/contracts/: coach-api.md  habits-api.md
src/: main.py
src/auth/: dependencies.py
src/lib/: redis_keys.py
src/models/: coach.py  habit.py
src/routes/: coach.py  habits.py
src/services/: coach_service.py  habit_service.py  redis_client.py  stats_service.py
tests/: conftest.py  test_habits.py
